--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <!-- NAVBAR -->
 <header class="bg-white shadow">
   <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-    <div class="flex items-center gap-2">
-      <span class="text-xl font-bold text-blue-600">InfoTrust AI</span>
-    </div>
+    <div class="flex items-center gap-3">
+  <img src="logo.png" alt="InfoTrust AI" class="h-10">
+  <span class="text-xl font-bold text-blue-600">InfoTrust AI</span>
+</div>
     <nav class="space-x-6 text-gray-600">
       <a href="#" class="text-blue-600 font-semibold">Accueil</a>
       <a href="#">Comment ça marche</a>
