--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
     <div class="flex items-center gap-3">
   <img src="logo.png" alt="InfoTrust AI" class="h-14">
-  <span class="text-xl font-bold text-blue-600">InfoTrust AI</span>
+  <span class="text-xl font-bold">
+  <span class="text-blue-900">InfoTrust</span>
+  <span class="text-green-600">AI</span>
+</span>
 </div>
     <nav class="space-x-6 text-gray-600">
       <a href="#" class="text-blue-600 font-semibold">Accueil</a>
