--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <!-- HERO -->
 <section class="max-w-5xl mx-auto px-6 py-20">
-  <h1 class="text-4xl font-extrabold mb-6">FACT CHECKING</h1>
+<h1 class="text-4xl font-semibold mb-6 text-blue-900">FACT CHECKING</h1>
 
   <div class="bg-white rounded-xl shadow p-6">
     <input
