--- a/index.html
+++ b/index.html
@@ -8,63 +8,102 @@
 
 <body class="bg-gradient-to-br from-blue-50 to-white min-h-screen">
 
-<!-- NAVBAR -->
+<!-- ================= NAVBAR ================= -->
 <header class="bg-white shadow">
   <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+
+    <!-- Logo -->
     <div class="flex items-center gap-3">
-  <img src="logo.png" alt="InfoTrust AI" class="h-14">
-  <span class="text-xl font-bold">
-  <span class="text-blue-900">InfoTrust</span>
-  <span class="text-green-600">AI</span>
-</span>
-</div>
-    <nav class="space-x-6 text-gray-600">
+      <img src="logo.png" alt="InfoTrust AI" class="h-12">
+      <span class="text-xl font-bold">
+        <span class="text-blue-900">InfoTrust</span>
+        <span class="text-green-600">AI</span>
+      </span>
+    </div>
+
+    <!-- Menu -->
+    <nav class="flex items-center gap-6 text-gray-600">
       <a href="#" class="text-blue-600 font-semibold">Accueil</a>
       <a href="#">Comment ça marche</a>
       <a href="#">Contact</a>
+
+      <!-- Bouton paramètres -->
+      <button class="ml-4 text-gray-600 hover:text-blue-600">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6"
+             fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round"
+                stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+        </svg>
+      </button>
     </nav>
+
   </div>
 </header>
 
-<!-- HERO -->
+<!-- ================= HERO ================= -->
 <section class="max-w-5xl mx-auto px-6 py-20">
-<h1 class="text-4xl font-semibold mb-6 text-blue-900">FACT CHECKING</h1>
 
-  <div class="bg-white rounded-xl shadow p-6">
-    <input
-      type="text"
-      placeholder="Entrer le texte ou l’URL à vérifier"
-      class="w-full border rounded p-4 mb-6"
-    />
+  <h1 class="text-4xl font-bold mb-8 text-blue-900">
+    FACT CHECKING
+  </h1>
 
-    <button class="bg-blue-600 hover:bg-blue-700 text-white px-8 py-3 rounded text-lg">
+  <div class="bg-white rounded-xl shadow p-8">
+
+    <!-- Champ + Results -->
+    <div class="flex gap-4 mb-6">
+      <input
+        type="text"
+        placeholder="Entrer le texte ou l’URL à vérifier"
+        class="flex-1 border border-gray-300 rounded-lg p-4
+               focus:outline-none focus:ring-2 focus:ring-blue-500"
+      />
+
+      <!-- RESULTS avec cercle -->
+      <button
+        class="flex items-center gap-2 bg-gray-100 border border-gray-300
+               rounded-lg px-5 text-gray-600 hover:bg-gray-200">
+        RESULTS
+        <span
+          class="w-4 h-4 border-2 border-blue-500
+                 border-t-transparent rounded-full animate-spin">
+        </span>
+      </button>
+    </div>
+
+    <!-- Bouton Analyser -->
+    <button
+      class="bg-blue-600 hover:bg-blue-700 text-white
+             px-10 py-4 rounded-lg text-lg font-semibold">
       ANALYSER
     </button>
+
   </div>
 </section>
 
-<!-- FEATURES -->
-<section class="max-w-6xl mx-auto px-6 pb-20 grid md:grid-cols-3 gap-6">
+<!-- ================= FEATURES ================= -->
+<section class="max-w-6xl mx-auto px-6 pb-20 grid md:grid-cols-3 gap-8">
+
   <div class="bg-white p-6 rounded-xl shadow text-center">
-    <h3 class="font-bold mb-2">Analyse en temps réel</h3>
-    <p class="text-gray-600 text-sm">
+    <h3 class="font-semibold mb-2">Analyse en temps réel</h3>
+    <p class="text-gray-500 text-sm">
       Vérifie instantanément si une information est fiable.
     </p>
   </div>
 
   <div class="bg-white p-6 rounded-xl shadow text-center">
-    <h3 class="font-bold mb-2">Rapports impartiaux</h3>
-    <p class="text-gray-600 text-sm">
+    <h3 class="font-semibold mb-2">Rapports impartiaux</h3>
+    <p class="text-gray-500 text-sm">
       Une analyse transparente basée sur des sources multiples.
     </p>
   </div>
 
   <div class="bg-white p-6 rounded-xl shadow text-center">
-    <h3 class="font-bold mb-2">Combat la désinformation</h3>
-    <p class="text-gray-600 text-sm">
+    <h3 class="font-semibold mb-2">Combat la désinformation</h3>
+    <p class="text-gray-500 text-sm">
       Aide à réduire la propagation des fausses nouvelles.
     </p>
   </div>
+
 </section>
 
 </body>
