--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <button
         class="flex items-center gap-2 bg-gray-100 border border-gray-300
                rounded-lg px-5 text-gray-600 hover:bg-gray-200">
-        RESULTS
+        RÉSULTATS
         <span
           class="w-4 h-4 border-2 border-blue-500
                  border-t-transparent rounded-full animate-spin">
