--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,46 +1,110 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>InfoTrust AI</title>
-
-  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Alpine.js -->
-  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 
-<body class="bg-gray-100 min-h-screen flex items-center justify-center">
+<body class="bg-gradient-to-br from-blue-50 to-white min-h-screen">
 
-  <div class="bg-white p-6 rounded-xl shadow-md w-full max-w-xl" x-data="{ text: '', result: null }">
+<!-- ================= NAVBAR ================= -->
+<header class="bg-white shadow">
+  <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
 
-    <h1 class="text-2xl font-bold mb-4 text-center">InfoTrust AI</h1>
-
-    <p class="text-gray-600 mb-4 text-center">
-      Vérifiez si une information est fiable ou trompeuse.
-    </p>
-
-    <textarea
-      class="w-full border rounded p-3 mb-4"
-      rows="5"
-      placeholder="Collez un texte ou une affirmation ici..."
-      x-model="text">
-    </textarea>
-
-    <button
-      class="bg-blue-600 text-white px-4 py-2 rounded w-full hover:bg-blue-700"
-      @click="result = 'Analyse en cours… (simulation)'">
-      Analyser
-    </button>
-
-    <div x-show="result" class="mt-4 p-4 bg-gray-100 rounded">
-      <strong>Résultat :</strong>
-      <p x-text="result"></p>
+    <!-- Logo -->
+    <div class="flex items-center gap-3">
+      <img src="logo.png" alt="InfoTrust AI" class="h-12">
+      <span class="text-xl font-bold">
+        <span class="text-blue-900">InfoTrust</span>
+        <span class="text-green-600">AI</span>
+      </span>
     </div>
 
+    <!-- Menu -->
+    <nav class="flex items-center gap-6 text-gray-600">
+      <a href="#" class="text-blue-600 font-semibold">Accueil</a>
+      <a href="#">Comment ça marche</a>
+      <a href="#">Contact</a>
+
+      <!-- Bouton paramètres -->
+      <button class="ml-4 text-gray-600 hover:text-blue-600">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6"
+             fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round"
+                stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+        </svg>
+      </button>
+    </nav>
+
   </div>
+</header>
+
+<!-- ================= HERO ================= -->
+<section class="max-w-5xl mx-auto px-6 py-20">
+
+  <h1 class="text-4xl font-bold mb-8 text-blue-900">
+    FACT CHECKING
+  </h1>
+
+  <div class="bg-white rounded-xl shadow p-8">
+
+    <!-- Champ + Results -->
+    <div class="flex gap-4 mb-6">
+      <input
+        type="text"
+        placeholder="Entrer le texte ou l’URL à vérifier"
+        class="flex-1 border border-gray-300 rounded-lg p-4
+               focus:outline-none focus:ring-2 focus:ring-blue-500"
+      />
+
+      <!-- RESULTS avec cercle -->
+      <button
+        class="flex items-center gap-2 bg-gray-100 border border-gray-300
+               rounded-lg px-5 text-gray-600 hover:bg-gray-200">
+        RÉSULTATS
+        <span
+          class="w-4 h-4 border-2 border-blue-500
+                 border-t-transparent rounded-full animate-spin">
+        </span>
+      </button>
+    </div>
+
+    <!-- Bouton Analyser -->
+    <button
+      class="bg-blue-600 hover:bg-blue-700 text-white
+             px-10 py-4 rounded-lg text-lg font-semibold">
+      ANALYSER
+    </button>
+
+  </div>
+</section>
+
+<!-- ================= FEATURES ================= -->
+<section class="max-w-6xl mx-auto px-6 pb-20 grid md:grid-cols-3 gap-8">
+
+  <div class="bg-white p-6 rounded-xl shadow text-center">
+    <h3 class="font-semibold mb-2">Analyse en temps réel</h3>
+    <p class="text-gray-500 text-sm">
+      Vérifie instantanément si une information est fiable.
+    </p>
+  </div>
+
+  <div class="bg-white p-6 rounded-xl shadow text-center">
+    <h3 class="font-semibold mb-2">Rapports impartiaux</h3>
+    <p class="text-gray-500 text-sm">
+      Une analyse transparente basée sur des sources multiples.
+    </p>
+  </div>
+
+  <div class="bg-white p-6 rounded-xl shadow text-center">
+    <h3 class="font-semibold mb-2">Combat la désinformation</h3>
+    <p class="text-gray-500 text-sm">
+      Aide à réduire la propagation des fausses nouvelles.
+    </p>
+  </div>
+
+</section>
 
 </body>
 </html>
-
