--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                focus:outline-none focus:ring-2 focus:ring-blue-500"
       />
 
-      <!-- RESULTS avec cercle -->
+     
       <button
         class="flex items-center gap-2 bg-gray-100 border border-gray-300
                rounded-lg px-5 text-gray-600 hover:bg-gray-200">
@@ -100,7 +100,7 @@
   <div class="bg-white p-6 rounded-xl shadow text-center">
     <h3 class="font-semibold mb-2">Combat la désinformation</h3>
     <p class="text-gray-500 text-sm">
-      Aide à réduire la propagation des fausses nouvelles.
+      Aide à réduire la propagation des fake news.
     </p>
   </div>
 
